@@ -1,13 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST actdiag-0.1.7.tar.gz 21092 RMD160 958561cc9f1782d293e1e32a53a0a8570bd06c6b SHA1 8285c05b0d26b8ef70d77d85513c171c1fdc2187 SHA256 80fd39d1ee3704162eb27e6373447030687951002e9c1b1917642d78028b97af
 DIST actdiag-0.1.8.tar.gz 21201 RMD160 5669b0590b21376197689893887db7dc9dad3c22 SHA1 ccb54b2d62f68ddfcf9d527608a5c7c381d5809c SHA256 f5442c562a87a1008c9d1ca1ef13a1d758c742be0afc6ce720979018d2ac951d
 DIST actdiag-0.2.0.tar.gz 22056 RMD160 fac65fef9a1a6cc3f477249cb24c6a4207fe39e8 SHA1 2ffac38966f3e6b7dca600ae663e95a6477b36b4 SHA256 d08a95901cc8cd4e6fee9a007b2f20b9d40220d479ecff491c555659127bd790
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7GJhoACgkQzJrj3cAXR0n6HQCggv7V3eQ2vrKgqzDb+DrHH3bW
-+OcAoJshCCT4x7HOXW+kTJpFR8lvtpsQ
-=/fUT
+iEYEAREKAAYFAk7GRYcACgkQzJrj3cAXR0kkmgCeM7Jsd3VyIMe7NTCrtcreGtMr
+1+4AoJr2o6PLU2Zz+mXt9ZyOG2WuFptq
+=Ykom
 -----END PGP SIGNATURE-----
