@@ -4,10 +4,10 @@ DESCRIPTION=Generate activity-diagram image file from spec-text file
 EAPI=3
 HOMEPAGE=http://pypi.python.org/pypi/actdiag/
 IUSE=minimal
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=Apache-2.0
 RDEPEND=>=media-gfx/blockdiag-0.8.1 !minimal? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
 SLOT=0
 SRC_URI=mirror://pypi/a/actdiag/actdiag-0.1.8.tar.gz
 _eclasses_=distutils	b4c334e216d998c4ce4b750cb091e42e	eutils	33ef77a15337022e05342d2c772a7a5a	jnrowe-pypi	4211dd4b4d8a9d76f3899257c8b7bbad	multilib	c4883399ddd3e1d2bd291607b30fded4	portability	31c75d06cb89aba6ecaef669f5425243	python	6bbd984910e27780e5d0ea543d83ef84	toolchain-funcs	39892b66d54a54fdd2b28731b975d8bf	user	4765e67e91ddcdf422aa880855b5fa77
-_md5_=3c2e6b4aa7573917501a4a53b3d44e6e
+_md5_=f04ed37f976ba0906792f6b285cfd569
