@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Nov 2011; James Rowe <jnrowe@gmail.com> -actdiag-0.1.7.ebuild,
+  actdiag-0.1.8.ebuild:
+  Keyworded x86.
+
   18 Nov 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.8.ebuild:
   Keyworded amd64.
 
